# Projects

./: .gitignore
Cactpot/: CactPot.cpp  README.md
Dungeons and Dragons NPC Generator/: DNDNPC.py  README.md
KnightConnect Discord Bot/: config.py
TicTacToe AI/: start.py  tictactoe.py  ttt_minimax_ai.py  util.py
Ving Et Un/: README.md  vingEtUn.py
Wordle/: Game.cpp  Game.h  README.md  wordleRPG.cpp
WordleQt/: CMakeLists.txt  Game.h  game.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
